[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://prefabs/GameOver.tscn" type="PackedScene" id=2]
[ext_resource path="res://prefabs/Nave.tscn" type="PackedScene" id=3]
[ext_resource path="res://prefabs/musica.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefabs/Enemy_Spawner.tscn" type="PackedScene" id=5]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }

[node name="UI" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="GameOver" parent="UI" instance=ExtResource( 2 )]

editor/display_folded = false
margin/left = 279.0
margin/top = -14.0
margin/right = -297.0
margin/bottom = -78.0

[node name="Nave" parent="." instance=ExtResource( 3 )]

[node name="musica" parent="." instance=ExtResource( 4 )]

[node name="Enemies" parent="." instance=ExtResource( 5 )]

[connection signal="timeout" from="UI/GameOver/Timer" to="." method="_on_GameOver_Timer_timeout"]

[connection signal="exit_tree" from="Nave" to="." method="_on_Nave_exit_tree"]


[editable path="UI/GameOver"]
